# stacky-sides

./: .env.example  Cargo.toml  POSSIBLE_IMPROVEMENTS.md  README.md  index.html
src/: channels.rs  cookies.rs  handlers.rs  main.rs  mod.rs
src/entities/: setup.rs
src/entity/: board.rs  game.rs  mod.rs  setup.rs
src/handlers/: dto.rs  error.rs  http.rs  message.rs  mod.rs  utils.rs  ws.rs
static/chat/js/: main.js
static/game/css/: game-play.css  play.css  share.css
static/game/js/: game-share.js  game-ui.js  play.js  share.js
templates/: base.html.tera
templates/chat/: index.html.tera
templates/game/: index.html.tera  play.html.tera  share.html.tera
