[package]
name = "trial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.4", features = ["ws"] }
hyper = { version = "0.14.16", features = ["full"] }
tera = "1"
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4.11", features = ["full"] }
tower-http = { version = "0.1.0", features = ["full"] }
