[package]
name = "trial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.4", features = ["ws"] }
chrono = "0.4"
dotenv = "0.15.0"
hyper = { version = "0.14.16", features = ["full"] }
sea-orm = { version = "0.5.0", features = [ "debug-print", "macros", "runtime-tokio-native-tls", "sqlx-postgres" ], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tera = "1"
tokio = { version = "1.15.0", features = ["full"] }
tower = { version = "0.4.11", features = ["full"] }
tower-http = { version = "0.2.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = { version = "2", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
